fix menu layout margin on mobile

--- a/meinberlin/assets/scss/components/_menu_layout.scss
+++ b/meinberlin/assets/scss/components/_menu_layout.scss
@@ -1,7 +1,12 @@
+.menu-layout__menu,
+.menu-layout__content {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
 @media (min-width: $breakpoint) {
     .menu-layout {
         @include clearfix;
-        margin-top: 2em;
     }
 
     .menu-layout__menu {
